crates/sol-types/tests/ui/event.stderr
error: unexpected end of input, expected parentheses
 --> tests/ui/event.rs:3:1
  |
3 | / sol! {
4 | |     event MissingParens1
5 | | }
  | |_^
  |
  = note: this error originates in the macro `sol` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected parentheses
 --> tests/ui/event.rs:8:26
  |
8 |     event MissingParens2 anonymous;
  |                          ^^^^^^^^^

error: expected parentheses
  --> tests/ui/event.rs:12:25
   |
12 |     event MissingParens3;
   |                         ^

error: expected `;`
  --> tests/ui/event.rs:15:1
   |
15 | / sol! {
16 | |     event MissingSemi1()
17 | | }
   | |_^
   |
   = note: this error originates in the macro `sol` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `;`
  --> tests/ui/event.rs:19:1
   |
19 | / sol! {
20 | |     event MissingSemi2() anonymous
21 | | }
   | |_^
   |
   = note: this error originates in the macro `sol` (in Nightly builds, run with -Z macro-backtrace for more info)

error: more than 3 indexed arguments for event
  --> tests/ui/event.rs:24:11
   |
24 |     event FourIndexedParameters(bool indexed, bool indexed, bool indexed, bool indexed);
   |           ^^^^^^^^^^^^^^^^^^^^^

error: more than 3 indexed arguments for event
  --> tests/ui/event.rs:28:11
   |
28 |     event FiveIndexedParameters(bool indexed, bool indexed, bool indexed, bool indexed, bool indexed);
   |           ^^^^^^^^^^^^^^^^^^^^^

error: more than 4 indexed arguments for anonymous event
  --> tests/ui/event.rs:36:11
   |
36 |     event FiveIndexedParametersAnonymous(bool indexed, bool indexed, bool indexed, bool indexed, bool indexed) anonymous;
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
